Visualization improved - Visualized Graph Nodes and Edges improved - Timetable Visualization improved - Frames are now fullscreen